--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
     <title>Unity WebGL Player | Station Saturn</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
@@ -112,7 +112,7 @@
         });
       };
       document.body.appendChild(script);
-    </script><script src="js/WebGL.loader.js"></script>
+    </script><script src="WebGL.loader.js"></script>
   
 
 </body></html>
